--- a/app/views/layers/_form.html.erb
+++ b/app/views/layers/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_for(@layer, :html => {:multipart => true}) do |f| %>
+<%= form_for(@layer, :html => {:class => 'form-horizontal', :multipart => true}) do |f| %>
+  <legend>Geojson format</legend>
   <% if @layer.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@layer.errors.count, "error") %> prohibited this layer from being saved:</h2>
@@ -11,17 +12,23 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
+  <div class="control-group">
+    <%= f.label :name, 'Name', :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :name %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :geojson_file %><br />
-    <%= f.file_field :geojson_file %>
+  <div class="control-group">
+    <%= f.label :geo_file, 'Geojson', :class => 'control-label' %>
+    <div class="controls">
+      <%= f.file_field :geo_file %>
+    </div>
   </div>
 
-  <div class="actions">
-    <%= f.submit %>
+  <div class="controls-group">
+    <div class="controls">
+      <%= f.submit nil, :class => "btn btn-primary", :disable_with => 'uploading' %>
+    </div>
   </div>
 <% end %>
