--- a/app/views/layers/show.html.erb
+++ b/app/views/layers/show.html.erb
@@ -1,3 +1,4 @@
+<% if controller_name == 'layers' %>
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -5,25 +6,32 @@
   <%= @layer.name %>
 </p>
 
+<%= link_to 'Edit', edit_layer_path(@layer) %> |
+<%= link_to 'Back', layers_path %> |
+<%= link_to  @permalink, @permalink %>
+<% end %>
 
 <div id="map"></div>
 
-<%= link_to 'Edit', edit_layer_path(@layer) %> |
-<%= link_to 'Back', layers_path %>
-
 <script type="text/javascript">
 $(document).ready(function(){
-  // var map = L.map('map').setView([51.505, -0.09], 13);
-  var map = L.map('map').setView([40.713955826286046, -73.99703979492188], 13);
+  var data_json = <%= raw @data_json %>;
+  var viewPoint = data_json['view_point'];
+  var map = L.map('map').setView(viewPoint, 11);
 
-  // add a CloudMade tile layer with style #997
-  L.tileLayer('http://{s}.tile.cloudmade.com/42c6e747565540068a4bb4ad883f1f41/997/256/{z}/{x}/{y}.png', {
-      attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://cloudmade.com">CloudMade</a>'
-  }).addTo(map);
+  var colorGroup = getColorGroup([]);
 
-  <% @layer.areas.each do |area| %>
-    L.polygon(<%= (Area::RGEO_FACTORY.unproject area.polygon.exterior_ring).points.map {|point| [point.y, point.x]} %>).addTo(map);
-  <% end %>
+
+  var areasLayer = new L.LayerGroup();
+  var area_points = data_json['area_points'];
+  for(k in area_points) {
+    if(area_points.hasOwnProperty(k)) {
+    var points = area_points[k];
+    addArea(areasLayer, points, -1, colorGroup);
+    }
+  }
+
+  init(map, colorGroup, {"baseLayers": {}, "overLayers": {"Polygon Layer": areasLayer}});
+  $('.legend-info').remove();
 });
-
 </script>
